fix(compat): select is styled badly on safari

--- a/www/ui/styles.css
+++ b/www/ui/styles.css
@@ -24,6 +24,11 @@
     select {
         font-family: inherit;
     }
+
+    select {
+        /*safari...*/
+        -webkit-appearance: none;
+    }
 }
 
 @layer utility {
